@@ -1,0 +1,19 @@
+/*
+ *   Copyright (c) 2009 CNRS-AIST
+ *
+ *   Research carried out within the scope of the Associated
+ *   International Laboratory: Joint Japanese-French Robotics
+ *   Laboratory (JRL)
+ *
+ *   Author: Olivier Stasse, Florent Lamiraux
+ *
+ */
+#ifndef DYNAMICS_GETLINE_H
+#define DYNAMICS_GETLINE_H
+
+#undef HAVE_GETLINE
+#if ${HAVE_GETLINE_INT}
+#define HAVE_GETLINE
+#endif
+
+#endif /* DYNAMICS_GETLINE_H*/
